[gd_scene load_steps=7 format=2]

[ext_resource path="res://GFX/PNG/Tiles/tile_537.png" type="Texture" id=1]
[ext_resource path="res://Computer/ComputerPopup.tscn" type="PackedScene" id=2]
[ext_resource path="res://GFX/PNG/Tiles/tile_519.png" type="Texture" id=3]
[ext_resource path="res://Interface/theme.tres" type="Theme" id=4]
[ext_resource path="res://Computer/Computer.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 41.7409, 29.043 )

[node name="Computer" type="Node2D" groups=[
"computer",
]]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 30.3088, 0.163536 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ComputerPopup" parent="CanvasLayer" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -240.0
margin_right = 320.0
margin_bottom = 240.0

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 32, 0 )
rotation = 1.5708
enabled = false
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="." groups=[
"labels",
]]
visible = false
margin_left = 25.8233
margin_top = -13.2037
margin_right = 105.823
margin_bottom = 13.7963
theme = ExtResource( 4 )
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
